fix(css): fix contact view on mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1578,6 +1578,19 @@ footer {
       }
     }
   }
+
+  .contact {
+    form {
+      .left {
+        width: 250px;
+        padding: 0;
+      }
+      .right {
+        width: 250px;
+        padding: 0;
+      }
+    }
+  }
 }
 
 .next {
